# Pressure-Drop-Estimation-of-Two-Phase-Adiabatic-Flows-in-Smooth-Tubes

./: 00_MeasuredData_wa_bi_smooth_raw.xlsx  Empirical.xlsx  Features.xlsx  README.md  Targets.xlsx  pyproject.toml
src/pressure_drop_estimation/: main.py
src/pressure_drop_estimation/data/: X_test.csv  X_train.csv  y_test.csv  y_train.csv
src/pressure_drop_estimation/model/: model.pkl  tpot_exported_pipeline.py
